--- a/index.html
+++ b/index.html
@@ -6,43 +6,77 @@
     <title>Jeff Liu - Professional Portfolio</title>
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="styles/styles.css">
-    <!-- Optional: Add Font Awesome for Social Icons -->
+    <!-- Font Awesome for Social Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pZ6l9cK84f+U8otz+HkCk2FbCibWj4SdE6v5lZcVtS0zzD0Y+9+sh9s/MBQ2cX2G0MzG1ZyGPrEwYI0H6r7lqw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="nav-logo">Jeff Liu</div>
+            <div class="nav-logo">
+                <img src="assets/images/logo.png" alt="Jeff Liu Logo" height="40">
+            </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- Hero Section with Video Background -->
+    <!-- Hero Section with Background Video -->
     <section class="hero" id="home">
         <video autoplay muted loop>
-            <source src="assets/videos/your-video.mp4" type="video/mp4">
+            <source src="assets/videos/background-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-overlay">
             <h1>Welcome to My Professional Portfolio</h1>
             <p>Innovating solutions and creating impactful experiences.</p>
-            <a href="#about">Discover More</a>
+            <a href="#about" class="btn-primary">Discover More</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about">
-        <h2>About Me</h2>
-        <p>
-            I'm Jeff Liu, a passionate web developer with expertise in creating dynamic and responsive websites. With a strong foundation in modern web technologies, I strive to deliver solutions that not only meet but exceed client expectations.
-        </p>
+        <div class="section-content">
+            <div class="about-image">
+                <img src="assets/images/about-image.jpg" alt="About Jeff">
+            </div>
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>
+                    I'm Jeff Liu, a passionate web developer with expertise in creating dynamic and responsive websites. With a strong foundation in modern web technologies, I strive to deliver solutions that not only meet but exceed client expectations.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <h2>My Work</h2>
+        <div class="portfolio-container">
+            <div class="portfolio-item">
+                <img src="assets/images/portfolio1.jpg" alt="Project 1">
+                <h3>Project One</h3>
+                <p>A brief description of Project One.</p>
+            </div>
+            <div class="portfolio-item">
+                <img src="assets/images/portfolio2.jpg" alt="Project 2">
+                <h3>Project Two</h3>
+                <p>A brief description of Project Two.</p>
+            </div>
+            <div class="portfolio-item">
+                <img src="assets/images/portfolio3.jpg" alt="Project 3">
+                <h3>Project Three</h3>
+                <p>A brief description of Project Three.</p>
+            </div>
+        </div>
     </section>
 
     <!-- Services Section -->
@@ -50,18 +84,21 @@
         <h2>My Services</h2>
         <div class="services-container">
             <div class="service">
+                <i class="fas fa-code"></i>
                 <h3>Web Development</h3>
                 <p>
                     Building responsive and robust websites using the latest technologies to ensure optimal performance and user experience.
                 </p>
             </div>
             <div class="service">
+                <i class="fas fa-paint-brush"></i>
                 <h3>UI/UX Design</h3>
                 <p>
                     Designing intuitive and engaging user interfaces that provide seamless experiences across all devices.
                 </p>
             </div>
             <div class="service">
+                <i class="fas fa-search"></i>
                 <h3>SEO Optimization</h3>
                 <p>
                     Enhancing website visibility and ranking on search engines through effective SEO strategies and best practices.
@@ -77,7 +114,7 @@
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
+            <button type="submit" class="btn-primary">Send Message</button>
         </form>
     </section>
 
